<resources>
    <string name="app_name">MARIA</string>
    <string name="conecte_se">Conecte-se:</string>
    <string name="cadastre_se">Cadastre-se:</string>
    <string name="abrir_tela_2">Abrir tela 2</string>
    <string name="DSE">Digite seu Email</string>
    <string name="DSS">Digite sua senha</string>
    <string name="Necessario">*Necessário</string>
    <string name="Senha">Senha</string>
    <string name="Nome">Nome</string>
    <string name="asking">Já possue uma conta ? Faça o login</string>
    <string name="Email" translatable="false">Email</string>
    <string name="title_activity_lista_tarefas">Lista_Tarefas</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logar">Logar</string>
    <string name="asking2">Não possui uma conta ?</string>
</resources>
